goit-markup-hw-06
goit-markup-hw-06

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
                 <div class="project-img">
                   <img src="./images/img(4).jpg" alt="Технокряк" width="370" />
                   <div class="project-thumb">
-                  <p class="name-thumb">
+                  <p class="name-thumb-portfolio">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов
                   </p>
                 </div>
@@ -103,7 +103,7 @@
                   width="370"
                 />
                 <div class="project-thumb">
-                  <p class="name-thumb">
+                  <p class="name-thumb-portfolio">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов
                   </p>
                 </div>
@@ -125,7 +125,7 @@
                   width="370"
                 />
                 <div class="project-thumb">
-                  <p class="name-thumb">
+                  <p class="name-thumb-portfolio">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов
                   </p>
                 </div>
@@ -141,7 +141,7 @@
                 <div class="project-img">
                 <img src="./images/img(7).jpg" alt="Проект Prime" width="370" />
                 <div class="project-thumb">
-                  <p class="name-thumb">
+                  <p class="name-thumb-portfolio">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов
                   </p>
                 </div>
@@ -157,7 +157,7 @@
                 <div class="project-img">
                 <img src="./images/img(8).jpg" alt="Проект Boxes" width="370" />
                 <div class="project-thumb">
-                  <p class="name-thumb">
+                  <p class="name-thumb-portfolio">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов
                   </p>
                 </div>
@@ -177,7 +177,7 @@
                   width="370"
                 />
                 <div class="project-thumb">
-                  <p class="name-thumb">
+                  <p class="name-thumb-portfolio">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов
                   </p>
                 </div>
@@ -199,7 +199,7 @@
                   width="370"
                 />
                 <div class="project-thumb">
-                  <p class="name-thumb">
+                  <p class="name-thumb-portfolio">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов
                   </p>
                 </div>
@@ -215,7 +215,7 @@
                 <div class="project-img">
                 <img src="./images/img(11).jpg" alt="Проект LAB" width="370" />
                 <div class="project-thumb">
-                  <p class="name-thumb">
+                  <p class="name-thumb-portfolio">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов
                   </p>
                 </div>
@@ -235,7 +235,7 @@
                   width="370"
                 />
                 <div class="project-thumb">
-                  <p class="name-thumb">
+                  <p class="name-thumb-portfolio">
                     Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов
                   </p>
                 </div>
@@ -301,20 +301,13 @@
         </li>
         </ul>
       </div>
-
-
-
       <div class="footer-mailing">
         <h2 class="footer-mailing-name">
           Подпишитесь на рассылку
         </h2>
 
         <form action="#" class="footer-form">
-          <label class="footer-mailing-label">
-            <textarea type="email" class="footer-mailing-messeage" name="footer-user-messeage" placeholder="E-mail"></textarea>
-            
-            </label>
-           
+            <textarea  class="footer-mailing-messeage" name="footer-user-messeage" placeholder="E-mail"></textarea>
             <button class="mailing-form-button" type="submit">
               Подписаться
               <svg class="footer-mailing-icon" width=24px height=24px>
