--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                 <label class="modal-form-label">Почта
                   <span class="modal-form-wrapper">
-                    <input type="mail" class="modal-form-input" name="user-mail"/>
+                    <input type="email" class="modal-form-input" name="user-mail"/>
                     <svg class="modal-icon" width=18px height=18px>
                       <use href="./images/icon.svg/sprite.svg#person"></use>
                     </svg>
@@ -103,7 +103,7 @@
                 </label>
 
                    <label class="modal-form-label">Комментарий
-                    <textarea type="mail" class="modal-form-messeage" name="user-messeage" placeholder="Введите текст"></textarea>
+                    <textarea class="modal-form-messeage"   name="user-messeage" placeholder="Введите текст"> </textarea>
                     </label>
                    <input type="checkbox"  id="accent-policy" class="modal-form-cheackbox">
                    <label for="accent-policy" class="modal-form-cheackbox-label">Соглашаюсь с рассылкой и принимаю&nbsp; <a href="" class="modal-link">Условия договора</a></label>
@@ -484,20 +484,12 @@
         </li>
         </ul>
       </div>
-
-
-
       <div class="footer-mailing">
         <h2 class="footer-mailing-name">
           Подпишитесь на рассылку
         </h2>
-
         <form action="#" class="footer-form">
-          <label class="footer-mailing-label">
-            <textarea type="email" class="footer-mailing-messeage" name="footer-user-messeage" placeholder="E-mail"></textarea>
-            
-            </label>
-           
+            <textarea  class="footer-mailing-messeage" name="footer-user-messeage" placeholder="E-mail"></textarea>
             <button class="mailing-form-button" type="submit">
               Подписаться
               <svg class="footer-mailing-icon" width=24px height=24px>
